manifests/media/ombi/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi-api
  namespace: media-ombi
spec:
  ingressClassName: nginx
  rules:
    - host: ombi.sestary.eu
      http:
        paths:
          - backend:
              service:
                name: ombi
                port:
                  number: 3579
            path: /api
            pathType: Prefix
  tls:
    - hosts:
        - ombi.sestary.eu
